--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -229,7 +229,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/images/wifi-free/BC2.png"
+                      src="/images/smartentry/DB2.png"
                       alt="Wire-Free Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -237,7 +237,7 @@
                   <h4
                     class="product-title font-medium text-gray-800 text-xs lg:text-sm transition-all duration-300 group-hover/item:text-cyan-600"
                   >
-                    Home Sensorrs
+                   Smart Entry
                   </h4>
                   <p
                     class="product-desc text-xs text-gray-600 mt-1 transition-all duration-300 group-hover/item:text-gray-800 hidden lg:block"
@@ -255,7 +255,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/images/outdoor-wifi/LC1C.png"
+                      src="/images/smarthome/RS2.png"
                       alt="Outdoor Wi-Fi Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -281,7 +281,7 @@
                     class="product-image-container overflow-hidden rounded-lg mb-3 mx-auto w-20 h-20 lg:w-28 lg:h-28 bg-gradient-to-br from-gray-50 to-gray-100"
                   >
                     <img
-                      src="/images//indoor-wifi/C1C-B.png"
+                      src="/images/Homeappliance/Ezviz 4-piece.png"
                       alt="Indoor Wi-Fi Cameras"
                       class="product-image w-full h-full object-cover transition-transform duration-500 group-hover/item:scale-125"
                     />
@@ -289,7 +289,7 @@
                   <h4
                     class="product-title font-medium text-gray-800 text-xs lg:text-sm transition-all duration-300 group-hover/item:text-cyan-600"
                   >
-                  Smart Entry
+                 Home Sensors
                   </h4>
                   <p
                     class="product-desc text-xs text-gray-600 mt-1 transition-all duration-300 group-hover/item:text-gray-800 hidden lg:block"
