--- a/src/pages/product2/index.astro
+++ b/src/pages/product2/index.astro
@@ -3,32 +3,32 @@ import Layout from "../../layouts/Layout.astro";
 import "../../styles/global.css";
 import Whatsapp from "../../components/Whatsapp";
 
-const title = "Security Camaeras | Surveillance Solutions";
+const title = "Smart Home | Surveillance Solutions";
 const description =
   "Explore our comprehensive range of surveillance solutions including Wire-Free Cameras, Outdoor Wi-Fi Cameras and Indoor Wi-Fi Cameras .";
-const canonicalURL = new URL("/product", Astro.site);
+const canonicalURL = new URL("/product2", Astro.site);
 const categories = [
   {
-    title: "Wire-Free Cameras",
+    title: "Smart Entry",
     description:
-      "Wire-Free provides affordable, high-quality  cameras with smart analytics and performance",
-    imageUrl: "/images/wifi-free/BC2.png",
+      "Smart doorbells, video door phones, and door cameras for secure and convenient entry monitoring.",
+    imageUrl: "/images/smartentry/DB2.png",
     href: "/categories/wireFree",
     icon: "video",
   },
   {
-    title: "Outdoor Wi-Fi Cameras",
+    title: "Smart Home Appliances",
     description:
-      "Outdoor Wi-Fi cameras offer high-definition video, easy maintenance, and affordability.",
-    imageUrl: "/images/outdoor-wifi/LC1C.png",
+      "Robotic vacuum cleaners and other intelligent appliances for effortless home cleaning and automation.",
+    imageUrl: "/images/smarthome/RS2.png",
     href: "/categories/outdoorcamera",
     icon: "camera",
   },
   {
-    title: "Indoor Wi-Fi Cameras",
+    title: "Home Sensors",
     description:
-      "Indoor Wi-Fi Cameras offer wide coverage, zoom, and robust stability",
-    imageUrl: "/images//indoor-wifi/C1C-B.png",
+      "Motion, open/close, and environmental sensors to keep your home safe and aware of every event.",
+    imageUrl: "/images/Homeappliance/Ezviz 4-piece.png",
     href: "/categories/indoorcamera",
     icon: "rotate-cw",
   },
