--- a/src/pages/categories/indoorcamera.astro
+++ b/src/pages/categories/indoorcamera.astro
@@ -5,7 +5,7 @@ import "../../styles/global.css";
 import Whatsapp from "../../components/Whatsapp";
 
 const products = await getCollection('indoor-wifi');
-const title = "Indoor Wi-FI Cameras";
+const title = "Indoor Wi-FI Cameras | Ezviz Dubai Authorized Distributor";
 const description = "High-performance surveillance solutions";
 const canonicalURL = new URL("/categories/indoorcamera", Astro.site);
 
