--- a/src/pages/categories/outdoorcamera/[...slug].astro
+++ b/src/pages/categories/outdoorcamera/[...slug].astro
@@ -369,6 +369,7 @@ const pageDescription = product.description;
                       data-scroll-delay={100 + (index * 50)}
                     >
                       <i class="fas fa-check-circle text-green-500 text-base mt-0.5 flex-shrink-0" />
+                      <span class="inline-block w-1 h-5 mt-0.5 rounded bg-blue-500 flex-shrink-0"></span>
                       <span class="text-gray-700">{feature}</span>
                     </li>
                   ))
