--- a/src/pages/categories/wireFree.astro
+++ b/src/pages/categories/wireFree.astro
@@ -5,7 +5,7 @@ import "../../styles/global.css";
 import Whatsapp from "../../components/Whatsapp";
 
 const products = await getCollection('wire-free');
-const title = "Wire-Free Cameras";
+const title = "Wire-Free Cameras | Ezviz Dubai Authorized Distributor";
 const description = "High-performance surveillance solutions";
 const canonicalURL = new URL("/categories/wireFree", Astro.site);
 
