--- a/src/pages/categories/homesensor/[...slug].astro
+++ b/src/pages/categories/homesensor/[...slug].astro
@@ -30,6 +30,7 @@ interface ProductSpecifications {
 
 interface Product {
     title: string;
+    slug: string;
     description: string;
     image: string;
     images?: ProductImage[];
