--- a/src/pages/categories/smartentry/[...slug].astro
+++ b/src/pages/categories/smartentry/[...slug].astro
@@ -38,6 +38,7 @@ interface Product {
     specification: ProductSpecifications;
     rating?: number;
     reviewCount?: number;
+    slug: string;
 }
 
 export async function getStaticPaths() {
