--- a/src/pages/categories/wireFree/[...slug].astro
+++ b/src/pages/categories/wireFree/[...slug].astro
@@ -31,6 +31,7 @@ interface Product {
     title: string;
     description: string;
     image: string;
+    slug: string;
     images?: ProductImage[];
     features: string[];
     price?: number;
