--- a/src/pages/categories/homeappliances/[...slug].astro
+++ b/src/pages/categories/homeappliances/[...slug].astro
@@ -32,6 +32,7 @@ interface Product {
     title: string;
     description: string;
     image: string;
+    slug: string;
     images?: ProductImage[];
     features: string[];
     price?: number;
